编写了会员页面的UI

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,15 @@
         <item name="android:drawableRight">@drawable/right</item>
         <item name="android:paddingRight">8dp</item>
     </style>
+    <!-- "会员信息"布局条形选择框右侧 -->
+    <style name="vip_right_text_icon">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:gravity">right</item>
+        <item name="android:textColor">#999999</item>
+        <item name="android:paddingRight">10dp</item>
+    </style>
 
     <style name="vertical_line_interval">
         <item name="android:layout_width">match_parent</item>
@@ -99,5 +108,31 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">15sp</item>
         <item name="android:paddingLeft">15dp</item>
+    </style>
+
+
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <!-- "会员信息详细记录"布局    左侧 -->
+    <style name="vipcontent_left_text_icon">
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:gravity">center_vertical|left</item>
+        <item name="android:textColor">#999</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <!-- "会员信息"布局条形选择框右侧 -->
+    <style name="vipcontent_right_text_icon">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
