--- a/app/src/main/res/layout/vipuserdetails.xml
+++ b/app/src/main/res/layout/vipuserdetails.xml
@@ -396,7 +396,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_delete"
+            android:id="@+id/tv_chognzhimima"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -410,7 +410,7 @@
             android:textSize="13sp" />
 
         <TextView
-            android:id="@+id/tv_nodelete"
+            android:id="@+id/tv_huanka"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -424,6 +424,7 @@
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/tv_suoding"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
